--- a/app/src/main/res/layout/activity_choice_worker.xml
+++ b/app/src/main/res/layout/activity_choice_worker.xml
@@ -107,6 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:visibility="gone"
             android:text="支付上门费"/>
 
         <LinearLayout
