--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -1,84 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_statistics_worker"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_statistics"
-    android:orientation="vertical"
+    android:background="@color/colorBlueDis"
     tools:context="com.tianyigps.dispatch2.activity.StatisticsActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_96"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_activity_statistics_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/choice_date"
-            android:textColor="@color/colorWhite" />
-
-        <TextView
-            android:id="@+id/tv_activity_statistics_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/tv_activity_statistics_1"
-            android:layout_marginLeft="@dimen/dp_8"
-            android:layout_marginRight="@dimen/dp_8"
-            android:layout_toEndOf="@+id/tv_activity_statistics_1"
-            android:layout_toRightOf="@+id/tv_activity_statistics_1"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textColor="@color/colorWhite" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/iv_activity_statistics_date"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/dp_16"
-            android:layout_alignTop="@+id/tv_activity_statistics_date"
-            android:layout_toEndOf="@+id/tv_activity_statistics_date"
-            android:layout_toRightOf="@+id/tv_activity_statistics_date"
-            android:src="@drawable/ic_date" />
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_120"
+            android:src="@color/colorBlueTheme"/>
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/dp_1"
-            android:layout_alignEnd="@+id/iv_activity_statistics_date"
-            android:layout_alignLeft="@+id/tv_activity_statistics_date"
-            android:layout_alignRight="@+id/iv_activity_statistics_date"
-            android:layout_alignStart="@+id/tv_activity_statistics_date"
-            android:layout_below="@+id/tv_activity_statistics_date"
-            android:layout_marginTop="@dimen/dp_2"
-            android:background="@color/colorWhite" />
-    </RelativeLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:src="@drawable/bg_statistics"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/dp_16"
-        android:layout_marginRight="@dimen/dp_16"
-        android:paddingLeft="@dimen/dp_16"
-        android:paddingRight="@dimen/dp_16"
-        android:background="@drawable/bg_statistics_list"
-        android:elevation="@dimen/dp_16"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
-        <FrameLayout
-            android:id="@+id/fl_activity_statistics_list_title"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dp_96"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-        <ListView
-            android:id="@+id/lv_activity_statistics"
+            <TextView
+                android:id="@+id/tv_activity_statistics_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/choice_date"
+                android:textColor="@color/colorWhite"/>
+
+            <TextView
+                android:id="@+id/tv_activity_statistics_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/tv_activity_statistics_1"
+                android:layout_marginLeft="@dimen/dp_8"
+                android:layout_marginRight="@dimen/dp_8"
+                android:layout_toEndOf="@+id/tv_activity_statistics_1"
+                android:layout_toRightOf="@+id/tv_activity_statistics_1"
+                android:gravity="center"
+                android:text="@string/app_name"
+                android:textColor="@color/colorWhite"/>
+
+            <ImageView
+                android:id="@+id/iv_activity_statistics_date"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_16"
+                android:layout_alignTop="@+id/tv_activity_statistics_date"
+                android:layout_toEndOf="@+id/tv_activity_statistics_date"
+                android:layout_toRightOf="@+id/tv_activity_statistics_date"
+                android:src="@drawable/ic_date"/>
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_1"
+                android:layout_alignEnd="@+id/iv_activity_statistics_date"
+                android:layout_alignLeft="@+id/tv_activity_statistics_date"
+                android:layout_alignRight="@+id/iv_activity_statistics_date"
+                android:layout_alignStart="@+id/tv_activity_statistics_date"
+                android:layout_below="@+id/tv_activity_statistics_date"
+                android:layout_marginTop="@dimen/dp_2"
+                android:background="@color/colorWhite"/>
+        </RelativeLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@color/colorNull"
-            android:scrollbars="none" />
+            android:layout_marginLeft="@dimen/dp_16"
+            android:layout_marginRight="@dimen/dp_16"
+            android:background="@drawable/bg_statistics_list"
+            android:elevation="@dimen/dp_16"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/dp_16"
+            android:paddingRight="@dimen/dp_16">
+
+            <FrameLayout
+                android:id="@+id/fl_activity_statistics_list_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <ListView
+                android:id="@+id/lv_activity_statistics"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@color/colorNull"
+                android:scrollbars="none"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
