--- a/app/src/main/res/layout/activity_worker_fragment_content.xml
+++ b/app/src/main/res/layout/activity_worker_fragment_content.xml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_worker_fragment_content"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_content"
-    android:orientation="vertical"
-    tools:context="com.tianyigps.dispatch2.activity.WorkerFragmentContentActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:id="@+id/activity_worker_fragment_content"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical"
+             tools:context="com.tianyigps.dispatch2.activity.WorkerFragmentContentActivity">
 
-    <FrameLayout
-        android:id="@+id/fl_activity_worker_content"
+    <ImageView
+        android:id="@+id/iv_activity_worker_fragment_content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"/>
 
-    <include
-        layout="@layout/layout_worker_fragment_content_bottom"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/fl_activity_worker_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <include
+            layout="@layout/layout_worker_fragment_content_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+</FrameLayout>
