--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -92,7 +92,8 @@
             <FrameLayout
                 android:id="@+id/fl_activity_statistics_list_title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                />
 
             <ListView
                 android:id="@+id/lv_activity_statistics"
