--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,12 @@
 
     <dimen name="dp_320">320dp</dimen>
 
+    <!--负距离-->
+    <dimen name="dp_8_n">-8dp</dimen>
+    <dimen name="dp_14_n">-14dp</dimen>
+    <dimen name="dp_16_n">-16dp</dimen>
+
+
     <!--字体-->
     <dimen name="sp_12">12sp</dimen>
     <dimen name="sp_14">14sp</dimen>
