--- a/app/src/main/res/layout/layout_top_toast.xml
+++ b/app/src/main/res/layout/layout_top_toast.xml
@@ -14,7 +14,7 @@
 
     <TextView
         android:id="@+id/tv_layout_top_toast"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_4"
         android:layout_marginStart="@dimen/dp_4"
