--- a/app/src/main/res/layout/layout_activity_operate_install_head.xml
+++ b/app/src/main/res/layout/layout_activity_operate_install_head.xml
@@ -77,7 +77,7 @@
             android:background="@drawable/bg_cycle_delete"
             android:padding="@dimen/dp_4"
             android:src="@drawable/ic_delete"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
         <View
             android:layout_width="match_parent"
@@ -158,7 +158,7 @@
             android:background="@drawable/bg_cycle_delete"
             android:padding="@dimen/dp_4"
             android:src="@drawable/ic_delete"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
         <View
             android:layout_width="match_parent"
