--- a/app/src/main/res/layout/layout_map.xml
+++ b/app/src/main/res/layout/layout_map.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:lines="1"
         android:padding="@dimen/dp_4"
-        android:text="@string/app_name"
+        android:text=""
         android:textSize="@dimen/sp_16" />
 
     <include
