--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_32">32dp</dimen>
     <dimen name="dp_40">40dp</dimen>
+    <dimen name="dp_44">44dp</dimen>
     <dimen name="dp_48">48dp</dimen>
     <dimen name="dp_64">64dp</dimen>
     <dimen name="dp_72">72dp</dimen>
