--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,6 +37,7 @@
     <dimen name="dp_14_n">-14dp</dimen>
     <dimen name="dp_16_n">-16dp</dimen>
 
+    <dimen name="px_1">1px</dimen>
 
     <!--字体-->
     <dimen name="sp_12">12sp</dimen>
