修复OperateInstall上传图片或没有定位时，图标显示橙色边框的问题

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,6 +38,7 @@
     <dimen name="dp_16_n">-16dp</dimen>
 
     <dimen name="px_1">1px</dimen>
+    <dimen name="px_2">2px</dimen>
 
     <!--字体-->
     <dimen name="sp_12">12sp</dimen>
