--- a/app/src/main/res/layout/fragment_pended.xml
+++ b/app/src/main/res/layout/fragment_pended.xml
@@ -17,11 +17,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/dp_24"
             android:orientation="vertical"
             android:paddingLeft="@dimen/dp_8"
-            android:paddingRight="@dimen/dp_8"
-            android:paddingTop="@dimen/dp_8">
+            android:paddingRight="@dimen/dp_8">
 
             <include
                 layout="@layout/layout_search"
