--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -95,12 +95,21 @@
                 android:layout_height="wrap_content"
                 />
 
-            <ListView
-                android:id="@+id/lv_activity_statistics"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:divider="@color/colorNull"
-                android:scrollbars="none"/>
+                android:layout_height="match_parent">
+
+                <ListView
+                    android:id="@+id/lv_activity_statistics"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:divider="@color/colorNull"
+                    android:scrollbars="none"/>
+
+                <include layout="@layout/layout_default"/>
+
+            </FrameLayout>
+
 
         </LinearLayout>
 
