InstallActivity 安装卡片可以显示完成数量，并且可以部分提交

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -30,7 +30,7 @@
         android:layout_height="@dimen/dp_48"
         android:background="@color/colorWhite"
         android:gravity="center"
-        android:text="退出登陆"
+        android:text="退出登录"
         android:textColor="@color/colorBlueTheme"
         android:textSize="@dimen/sp_16" />
 
